+ documentation is now complete. Now ready for reviewing

--- a/Documentation/einleitung.tex
+++ b/Documentation/einleitung.tex
@@ -17,3 +17,10 @@ Studenten, die zuvor keinen Kontakt mit C hatten ist das ein großer Vorteil, da 
 parallel zur theoretischen Informatik Vorlesung auch eine Vorlesung mit dem Titel „Programmieren in C“ 
 besucht werden muss. So muss kein starkes Umdenken stattfinden, wenn von \textsc{SetlX} zu C und auch 
 umgekehrt gewechselt wird.
+
+Die Hauptintention dieser Arbeit ist es, zu prüfen, ob es möglich wäre die \textsc{SetlX}-Programme, 
+die in der Vorlesung gezeigt werden, in Python-Skripte zu übersetzen. Ziel dabei ist es, 
+die Eleganz der Programme beizubehalten, damit die Studenten die verschiedenen 
+Algorithmen besser verstehen und erlernen können. Auch wenn es in Python teilweise 
+möglich wäre das Problem über einen anderen Weg, eventuell mit weniger Codezeilen, 
+zu lösen, soll dennoch der Hauptfokus auf den Lernprozess in der theoretischen Informatik liegen.
