--- a/Documentation/lecture_examples_python.tex
+++ b/Documentation/lecture_examples_python.tex
@@ -27,6 +27,7 @@
 \include{warum_python}
 \include{nur_python}
 \include{modul_lecture}
+\include{fazit}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% BIBLIOGRAPHY AND OTHER LISTS
